<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="89dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NoteTxT"
            android:textSize="24sp"
            tools:text="@string/NoteTxT" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TitleTxt"
            tools:text="@string/TitleTxt" />

        <EditText
            android:id="@+id/EnterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/EnterTitle"
            tools:text="@string/EnterTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EnterContext"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/EnterNoteContext"
            tools:text="@string/EnterNoteContext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CloseNoteBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClose_click"
            android:text="@string/CloseButton"
            tools:text="@string/CloseButton" />

        <Button
            android:id="@+id/SaveNoteBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSave_click"
            android:text="@string/SaveButton"
            tools:text="@string/SaveButton" />

        <Button
            android:id="@+id/DelNoteBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDelete_click"
            android:text="@string/DeleteButton"
            tools:text="@string/DeleteButton" />
    </LinearLayout>
</LinearLayout>