<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".List">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:gravity="center"
            android:password="false"
            android:text="@string/NoteListTxt"
            android:textSize="24sp"
            tools:text="@string/NoteListTxt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/IDTxt"
            tools:text="@string/IDTxt" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/NoteNameTxt"
            tools:text="@string/NoteNameTxt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/NoteList"
            android:layout_width="match_parent"
            android:layout_height="364dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AddBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onNew_click"
            android:text="@string/AddButton"
            tools:text="@string/AddButton" />

        <Button
            android:id="@+id/ExitListBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignOut_click"
            android:text="@string/ExitButton"
            tools:text="@string/ExitButton" />
    </LinearLayout>
</LinearLayout>