<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="179dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/AuthText"
            android:textSize="34sp"
            tools:text="@string/AuthText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Login" />

        <EditText
            android:id="@+id/LoginAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/EnterLogin"
            tools:text="@string/EnterLogin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Password" />

        <EditText
            android:id="@+id/PassAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/EnterPassword"
            tools:text="@string/EnterPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/RegBut"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRegister_click"
            android:text="@string/RegButton"
            tools:text="@string/RegButton" />

        <Button
            android:id="@+id/OkAuthBut"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignIn_click"
            android:text="@string/OkButton"
            tools:text="@string/OkButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ExitBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onExit_click"
            android:text="@string/ExitButton"
            tools:text="@string/ExitButton" />
    </LinearLayout>
</LinearLayout>